--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,24 +7,35 @@
     display: flex;
     position: sticky;
     top: 0px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     max-width: 100vw;
     background-color: #121212;
+    padding: 0 64px 0 64px;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 500;
+    z-index: 10;
 }
 
 .logo__container {
     flex: 0 1 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo__container > img {
-    max-width: 150px;
+    max-width: 175px;
+    justify-content: center;
+    transition: all 250ms ease-out;
+
 }
 
-.logo {
-    padding: 30px;
+.logo__container > img:hover {
+    transform: scale(110%);
+    transition: all 250ms ease-out;
 }
 
 .link__container {
     display: flex;
-    background-color: #131313;
+    background-color: #121212;
 }
