--- a/src/components/SocialLink.css
+++ b/src/components/SocialLink.css
@@ -22,6 +22,9 @@
     color: #131313;
 }
 
+.socialLink__main:hover > p:before {
+}
+
 .brand__logo {
     color: #ddd;
     padding: 8px;
@@ -32,6 +35,8 @@
     color: #ddd;
     font-size: 1.3em;
     font-weight: 500;
+    line-height: 1em;
+    letter-spacing: -1px;
     transition: all 500ms ease;
     text-transform: uppercase;
 }
