--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,10 +5,10 @@
 
 .header__container {
     display: flex;
-    position: sticky;
+    position: fixed;
     top: 0px;
     justify-content: space-evenly;
-    max-width: 100vw;
+    width: 100vw;
     background-color: #121212;
     padding: 0 64px 0 64px;
     font-family: 'Orbitron', sans-serif;
