--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,6 +1,9 @@
 .landing__main {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
     flex-grow: 1;
-    animation: rainbow 15s linear infinite;
     z-index: 0;
     background-color: #121212;
     color: #ddd;
@@ -11,16 +14,34 @@
 
 h1.title {
     font-family: 'Teko', sans-serif;
-    font-size: 5em;
+    font-size: min(5em, 20vw);
     text-transform: uppercase;
     letter-spacing: -0.02em;
     line-height: 0.9em ;
 }
 
-.img__wrapper {
+.text__wrapper {
     display: flex;
+    flex-direction: column;
+    width: 50vw;
+    max-width: 600px;
     align-items: center;
     justify-content: center;
+    padding: 0 64px 0 64px;
+}
+
+.text__wrapper > .subtitle {
+    align-self: flex-start;
+    font-size: min(1em, 10vw);
+}
+
+.img__wrapper {
+    display: flex;
+    flex: 1 0 auto;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    padding: 64px;
     max-width: 600px;
     aspect-ratio: 1;
     animation: float 3s alternate ease-in-out infinite;
