--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,42 +1,30 @@
-* {
-    padding: 0;
-    margin: 0;
-}
 
 .header__container {
-    display: flex;
-    position: fixed;
-    top: 0px;
-    justify-content: space-evenly;
-    width: 100vw;
-    background-color: #121212;
-    padding: 0 64px 0 64px;
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 500;
-    z-index: 10;
-    border-bottom: 1px solid white;
+  display: flex;
+  top: 0px;
+  justify-content: space-evenly;
+  background-color: #121212;
+  padding: 0 64px 0 64px;
+  font-family: "Orbitron", sans-serif;
+  font-weight: 500;
+  z-index: 10;
+  border-bottom: 2px solid white;
 }
 
 .logo__container {
-    flex: 0 1 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex: 0 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo__container > img {
-    max-width: 175px;
-    justify-content: center;
-    transition: all 250ms ease-out;
-
-}
-
-.logo__container > img:hover {
-    transform: scale(105%);
-    transition: all 150ms ease-out;
+  max-width: 175px;
+  justify-content: center;
+  transition: all 250ms ease-out;
 }
 
 .link__container {
-    display: flex;
-    background-color: #121212;
+  display: flex;
+  background-color: #121212;
 }
