--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,9 +1,10 @@
 .landing__main {
     display: flex;
     flex-direction: row-reverse;
+    flex: 1 0 auto;
+    width: 100%;
     align-items: center;
     justify-content: center;
-    flex-grow: 1;
     z-index: 0;
     background-color: #121212;
     color: #ddd;
@@ -13,26 +14,46 @@
 }
 
 h1.title {
+    margin: auto;
     font-family: 'Teko', sans-serif;
-    font-size: min(5em, 20vw);
+    font-size: min(3.7em, 20vw);
     text-transform: uppercase;
     letter-spacing: -0.02em;
-    line-height: 0.9em ;
+    line-height: .9em;
 }
 
 .text__wrapper {
     display: flex;
     flex-direction: column;
     width: 50vw;
-    max-width: 600px;
     align-items: center;
     justify-content: center;
-    padding: 0 64px 0 64px;
+    padding: 64px;
+    text-align: start;
+    border: 2px solid #01F9FD;
+    border-radius: 8px;
+}
+
+.landing__main > .text__wrapper {
+    margin-left: 32px;
+    max-width: 600px;
 }
 
 .text__wrapper > .subtitle {
     align-self: flex-start;
     font-size: min(1em, 10vw);
+    padding: 0;
+}
+
+.description {
+    font-family: 'Orbitron', sans-serif;
+    margin-top: 32px;
+    font-size: 24px;
+}
+
+.description > span{
+    font-weight: 500;
+    color: #01F9FD;
 }
 
 .img__wrapper {
@@ -42,6 +63,7 @@ h1.title {
     justify-content: center;
     width: 50vw;
     padding: 64px;
+    margin-right: 32px;
     max-width: 600px;
     aspect-ratio: 1;
     animation: float 3s alternate ease-in-out infinite;
