--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+}
+
+section {
+    scroll-snap-align: start;
 }
 
 .wrapper {
