--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,11 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-snap-type: y proximity;
 }
 
 section {
+    scroll-snap-align: start;
 }
 
 .wrapper {
