--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -11,6 +11,7 @@
     letter-spacing: 1px;
     font-size: 2em;
     font-family: 'Orbitron', sans-serif;
+    padding: 0 32px 0 32px;
 }
 
 h1.title {
