--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,23 +1,89 @@
 .project_card {
+    background: linear-gradient(60deg, rgba(247,1,253,1) 0%, rgba(1,249,253,1) 35%, rgba(1,249,253,1) 60%, rgba(247,1,253,1) 100%);    background-size: 200%;
     position: relative;
     width: 60vw;
     aspect-ratio: 9 / 16;
     margin: 32px;
     max-width: 1200px;
     max-height: 500px;
-    border: 2px solid;
+    z-index: 3;
+    border-radius: 8px;
+    animation: background-pan 10s linear infinite;
+    padding: 1% 2%;
+}
+
+.project_card::before {
+    inset: 2px;
+    border-radius: 8px;
+    background-color: #121212;
+    content: "";
+    z-index: -2;
+    position: absolute;
 }
 
 .project_card img {
     position: absolute;
-    width: 100%;
+    width: 90%;
     top: 50%;
     left: 50%;
+    z-index: -1;
     transform: translate(-50%, -50%);
     filter: brightness(.7);
+    transition: all 200ms ease-in-out;
+}
+
+.project_card:hover img {
+    filter: brightness(.3);
 }
 
 .project_card h1 {
     font-family: 'Teko', sans-serif;
-    font-size: 5em;
+    font-size: max(3vw, 32px);
+    transition: all 300ms ease-in-out;
+    opacity: 0;
+}
+
+.project_card:hover h1 {
+    opacity: 100%;
+}
+
+.project_card p {
+    font-size: max(1.6vw, 24px);
+    font-family: 'orbitron', sans-serif;
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+}
+
+.project_card > a {
+    cursor: pointer;
+}
+
+.project_card:hover p {
+    opacity: 100%;
+    font-weight: 300;
+}
+
+.gh_link {
+    visibility: hidden;
+    font-size: 50px;
+    position: absolute;
+    bottom: 8px;
+    right: 32px;
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+}
+
+.project_card:hover .gh_link {
+    visibility: visible;
+    opacity: 100%;
+}
+
+@keyframes background-pan {
+    from {
+        background-position: 0% center;
+    }
+
+    to {
+        background-position: -200% center;
+    }
 }
