--- a/src/components/SocialLink.css
+++ b/src/components/SocialLink.css
@@ -30,7 +30,7 @@
 
 .brand__label {
     color: #ddd;
-    font-size: 1.3em;
+    font-size: 1.3vmin;
     font-weight: 500;
     line-height: 1em;
     letter-spacing: -1px;
