--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
-
 .header__container {
   display: flex;
-  top: 0px;
+  position: sticky;
+  width: 100%;
   justify-content: space-evenly;
   background-color: #121212;
   padding: 0 64px 0 64px;
@@ -12,7 +12,6 @@
 }
 
 .logo__container {
-  flex: 0 1 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,5 +25,13 @@
 
 .link__container {
   display: flex;
+  width: 0;
   background-color: #121212;
+}
+
+
+@media only screen and (max-width: 1250px) {
+  .link__container {
+    display: none !important;
+  }
 }
