--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -3,6 +3,7 @@
     flex-direction: row-reverse;
     flex: 1 0 auto;
     width: 100%;
+    height: 75vh;
     align-items: center;
     justify-content: center;
     z-index: 0;
