--- a/src/components/TopButton.css
+++ b/src/components/TopButton.css
@@ -3,8 +3,10 @@
     bottom: 64px;
     right: 64px;
     z-index: 10;
+    transition: all 300ms ease-in-out;
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
 }
